--- a/code/projects/12/index.html
+++ b/code/projects/12/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Teach Me</title>
+    <title>Eccentric Waves</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
     <style>
     body {
       margin: 0;
@@ -15,6 +14,5 @@
   </head>
   <body>
     <script src="../p5.min.js" type="text/javascript"></script>
-    <script src="../p5.dom.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
 </html>
