--- a/code/projects/13/index.html
+++ b/code/projects/13/index.html
@@ -9,7 +9,7 @@
 		</style>
 	</head>
 	<body>
-		<script src="../three.js"></script>
+		<script src="../three.min.js"></script>
 		<script src="script.js"></script>
 	</body>
 </html>
