Added some more inteterests expereiences...

--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
         </div>
         <p>Hi, I’m Michael. </p>
 
-        <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique applications of technology in design. The terms that might define this unorthodox focus in studies is <em>creative technology</em>, <em>creative coding</em>, and <em>solution design</em>. </p>
+        <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my focus is <em>creative coding</em>, <em>physical computing</em>, <em>installation art</em>, and <em>concept design</em>. </p>
 
-        <p>In parallel with Parsons, I am perusing a secondary major at Eugene Lang in Philosophy and Media. My focus in this area of studies emphasizes on technology as an existential extension of the modern human being. My goal is to take these explorations and apply them with technology with an emphasis on moral awarness, and underlying motives. </p>
+        <p>In parallel with Parsons, I am persuing a secondary major at Eugene Lang in Philosophy and Media. My interest is to examine technology as an existential extension of the modern human being. These investigations frequently lead to questions about the human condition in the time of evolving technologies. It is a path that I’m directing myself as I attempt to combine it with my primary focus.</p>
 
-        <p>May, 2016 </p>
+        <p>My primary experiences range from front-end and back-end web technologies, to Internet of Things and physical computing projects that incorporate various electronic platforms such as the Arduino and the Raspberry Pi. My other experiences include creative coding using Processing and openFrameworks, sound effect design, 3d animation, and video editing. </p>
+
+        <p>June, 2016 </p>
       </div>
     </div>
   </main>
@@ -102,14 +104,7 @@
 
   <!-- RESUME PAGE  -->
   <main id="resume">
-    <div class="crop-img">
-      <img src="src/img/01.jpg" alt="Artificial Intellegence Box" />
-    </div>
-
     <div class="content">
-      <div class="img-caption">
-        Artificial Intellect Box (2015)
-      </div>
       <h1>Résumé</h1>
       <h3>Creative Technology, Physical Computing, and Web Interaction Design</h3>
 
@@ -151,14 +146,13 @@
       <h2>Interests and Influences</h2>
       <ul>
         <li>Sceptic, Pragmatic, Stoic, and Utilitarian Philosophy</li>
-        <li>Avant-Gard, Cubist, Constructivst, and Dada movements</li>
-        <li>Plato, Aristotle, Sextus </li>
-        <li>Space Exploration and Climate Change</li>
+        <li>Space Exploration, Climate Change, and Humanities</li>
         <li>History of Mankind</li>
-        <li>Photography</li>
-        <li>Typography</li>
+        <li>Modular/Analog Sound Synthesis</li>
         <li>Machine Learning & Neural Networks</li>
         <li>Cryptography</li>
+        <li>Photography</li>
+        <li>Typography</li>
         <li>Yoga</li>
       </ul>
       <h2>Languages</h2>
@@ -182,16 +176,9 @@
 
   <!-- CONTACT PAGE -->
   <main id="contact">
-    <div class="crop-img">
-      <img src="src/img/01.jpg" alt="Artificial Intellegence Box" />
-    </div>
-
     <div class="content">
-      <div class="img-caption">
-        Artificial Intellect Box (2015)
-      </div>
       <h1>Contact</h1>
-      <p>You have become aquainted with my digital identity, now become aquainted with actual me... Contact me.</p>
+      <p>You have become aquainted with my digital identity, now become aquainted with actual me...</p>
       <h3>Ways to Contact Me</h3>
       <b>Email:</b> <a
       href="mailto:mbrav@protonmail.com?body=Big%20brother%20is%20watching%20you%0D%0A-%20George%20Orwell">mbrav@protonmail.com</a>
