--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         </div>
         <p>Hi, I’m Michael. </p>
 
-        <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my focus are <em>creative coding</em>, <em>physical computing</em>, <em>installation art</em>, and <em>concept design</em>. </p>
+        <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative coding</em>, <em>physical computing</em>, <em>installation art</em>, and <em>concept design</em>. </p>
 
-        <p>My experience ranges from front-end and back-end development with web technologies, to Internet of Things and physical computing projects that incorporate various electronic platforms such as the Arduino and the Raspberry Pi. My other experiences include creative coding using Processing and openFrameworks, sound effect design, 3d animation, and video editing. </p>
+        <p>My experiences range from front-end and back-end web development, to Internet of Things and physical computing projects that incorporate various electronic platforms such as the Arduino and the Raspberry Pi. My other skills include creative coding using openFrameworks and Processing libraries, sound effect design, 3d animation, and video editing. </p>
 
-        <p>In parallel with studying Design &amp; Technology at Parsons, I am currently persuing a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. These investigations frequently lead to concerns about the human condition in a time of evolving technologies. It is a path that I’m attempting to direct myself as I combine it with my primary major.</p>
+        <p>In parallel with studying Design &amp; Technology at Parsons, I am persuing a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. These investigations also regard the human condition at a time of evolving technologies. It is a path that I’m attempting to direct myself as I combine it with my primary major.</p>
 
         <p>June, 2016 </p>
       </div>
