Fixed ugly nav bug
* added a page in order to start working on AJAX
* Added another project
* Lost my GPG key :(

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       <h4>Emotion Cube<b>(2015)</b></h4>
       <h4>Space Sound Splosion<b>(2015)</b></h4>
       <h4>Artificial Intellect Box<b>(2015)</b></h4>
+      <h4>Logos - Divine Principle of Everything<b>(2015)</b></h4>
       <h4>Thermo Star<b>(2014)</b></h4>
       <h4>Feeduino<b>(2012)</b></h4>
       <h1>Manifestos</h1>
