--- a/code/projects/14/index.html
+++ b/code/projects/14/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <style>
     body {
-      margin: 0;
+      margin: 10px;
       font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
     }
 
