--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <!-- ABOUT PAGE  -->
   <main id="about">
-    <div class="crop-img">
+    <div class="slide-img">
       <img src="src/img/01.jpg" alt="Artificial Intellegence Box" />
     </div>
     <div class="content">
@@ -68,6 +68,8 @@
 
         <p>In parallel with studying Design &amp; Technology at Parsons, I am persuing a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. These investigations also regard the human condition at a time of evolving technologies. It is a path that I’m attempting to direct myself as I combine it with my primary major.</p>
 
+        <p>At the time of this writing, this website remains unfinished while it is being updated on a weekly basis. </p>
+
         <p>June, 2016 </p>
       </div>
     </div>
@@ -75,7 +77,7 @@
 
   <!-- PROJECTS PAGE  -->
   <main id="projects">
-    <div class="crop-img">
+    <div class="slide-img">
       <img src="src/img/01.jpg" alt="Artificial Intellegence Box" />
     </div>
     <div class="content">
@@ -83,23 +85,32 @@
         Artificial Intellect Box (2015)
       </div>
       <h1>Projects</h1>
-      <h4>Portfolio Website <b>(2016)</b></h4>
-      <h4><a href="code/index.html">Javascript Experiments</a> <b>(January - May 2016)</b></h4>
-      <h4>Infrastructural Utopia Tower<b>(2016)</b></h4>
-      <h4>Téchnelogical Feudalism<b>(2016)</b></h4>
-      <h4>Multiverse Clockwork<b>(2016)</b></h4>
-      <h4>They Know What is What<b>(2016)</b></h4>
-      <h4>in.fORM alpha <b>(2016)</b></h4>
-      <h4>Endeavour's Guide for the 21st Century<b>(2016)</b></h4>
-      <h4>Flowing Pagoda<b>(2015)</b></h4>
-      <h4>Emotion Cube<b>(2015)</b></h4>
-      <h4>Space Sound Splosion<b>(2015)</b></h4>
-      <h4>Artificial Intellect Box<b>(2015)</b></h4>
-      <h4>Logos - Divine Principle of Everything<b>(2015)</b></h4>
-      <h4>Thermo Star<b>(2014)</b></h4>
-      <h4>Feeduino<b>(2012)</b></h4>
+      <ul class="project-list">
+        <h4>Portfolio Website <b>(2016)</b></h4>
+        <h4><a href="code/index.html">Javascript Experiments</a> <b>(January - May 2016)</b></h4>
+        <li><a href="/pages/utopia-tower.html">Infrastructural Utopia Tower</a><b>(2016)</b></li>
+        <h4>Téchnelogical Feudalism<b>(2016)</b></h4>
+        <h4>Multiverse Clockwork<b>(2016)</b></h4>
+        <h4>They Know What is What<b>(2016)</b></h4>
+        <h4>in.fORM alpha <b>(2016)</b></h4>
+        <h4>Endeavour's Guide for the 21st Century<b>(2016)</b></h4>
+        <h4>Flowing Pagoda<b>(2015)</b></h4>
+        <h4>Emotion Cube<b>(2015)</b></h4>
+        <h4>Space Sound Splosion<b>(2015)</b></h4>
+        <li><a href="/pages/intellect.html">Artificial Intellect Box</a><b>(2015)</b></li>
+        <h4>Logos - Divine Principle of Everything<b>(2015)</b></h4>
+        <h4>Thermo Star<b>(2014)</b></h4>
+        <h4>Feeduino<b>(2012)</b></h4>
+      </ul>
       <h1>Manifestos</h1>
       <h4>An Artist is A Neural Psynapse</h4>
+    </div>
+  </main>
+
+  <!-- DYNAMIC CONTENT PAGE-->
+  <main id="ajax">
+    <div class="content">
+      <!-- ajax content to load  -->
     </div>
   </main>
 
