Basic AJAX project generation using  now working 😅

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 
   <!-- Description  -->
   <meta name="title" content="Michael Braverman" />
-  <meta name="description" content="Michael Braverman's portofolio site" />
-  <meta name="keywords" content="design, art, technology, portfolio" />
+  <meta name="description" content="Creative technology student based in New York" />
+  <meta name="keywords" content="design, art, technology, portfolio, creative coding, creative technology, physical computing, installation, concept design, Michael, Braverman" />
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
   <!-- Open Graph Protocol -->
 	<meta property="og:title" content="Michael Braverman"/>
-	<meta property="og:image" content="img/aibox-tmb.jpg"/>
+	<meta property="og:image" content="src/img/aibox-tmb.jpg"/>
 	<meta property="og:site_name" content="mbrav.com"/>
-	<meta property="og:description" content="design, art, technology, portfolio"/>
+	<meta property="og:description" content="Creative technology student based in New York"/>
 
   <!-- Fonts  -->
   <link href='https://fonts.googleapis.com/css?family=Comfortaa:700' rel='stylesheet' type='text/css'>
@@ -85,7 +85,7 @@
         Artificial Intellect Box (2015)
       </div>
       <h1>Projects</h1>
-      <ul class="project-list">
+      <ul id="project-list">
         <h4>Portfolio Website <b>(2016)</b></h4>
         <h4><a href="code/index.html">Javascript Experiments</a> <b>(January - May 2016)</b></h4>
         <li><a href="/pages/utopia-tower.html">Infrastructural Utopia Tower</a><b>(2016)</b></li>
