--- a/index.html
+++ b/index.html
@@ -85,25 +85,10 @@
         Artificial Intellect Box (2015)
       </div>
       <h1>Projects</h1>
-      <ul id="project-list">
-        <h4>Portfolio Website <b>(2016)</b></h4>
-        <h4><a href="code/index.html">Javascript Experiments</a> <b>(January - May 2016)</b></h4>
-        <li><a href="/pages/utopia-tower.html">Infrastructural Utopia Tower</a><b>(2016)</b></li>
-        <h4>Téchnelogical Feudalism<b>(2016)</b></h4>
-        <h4>Multiverse Clockwork<b>(2016)</b></h4>
-        <h4>They Know What is What<b>(2016)</b></h4>
-        <h4>in.fORM alpha <b>(2016)</b></h4>
-        <h4>Endeavour's Guide for the 21st Century<b>(2016)</b></h4>
-        <h4>Flowing Pagoda<b>(2015)</b></h4>
-        <h4>Emotion Cube<b>(2015)</b></h4>
-        <h4>Space Sound Splosion<b>(2015)</b></h4>
-        <li><a href="/pages/intellect.html">Artificial Intellect Box</a><b>(2015)</b></li>
-        <h4>Logos - Divine Principle of Everything<b>(2015)</b></h4>
-        <h4>Thermo Star<b>(2014)</b></h4>
-        <h4>Feeduino<b>(2012)</b></h4>
-      </ul>
+      <div id="project-list">
+      </div>
       <h1>Manifestos</h1>
-      <h4>An Artist is A Neural Psynapse</h4>
+      <li>An Artist is A Neural Psynapse</li>
     </div>
   </main>
 
@@ -219,6 +204,6 @@
 </body>
 <!-- <script src="code/projects/p5.min.js" type="text/javascript"></script>
 <script src="code/projects/12/script.js" type="text/javascript"></script> -->
-<script src="src/jquery-2.2.3.min.js" type="text/javascript"></script>
+<script src="src/jquery-3.0.0-rc1.min.js" type="text/javascript"></script>
 <script src="src/script.js" type="text/javascript"></script>
 </html>
