--- a/pages/intellect.html
+++ b/pages/intellect.html
@@ -4,7 +4,7 @@
 
 <h3 id="may2015">May 2015</h3>
 
-<iframe width="100%" height="200" src="https://www.youtube.com/embed/2c6VdnEl7Dk" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/2c6VdnEl7Dk" frameborder="0" allowfullscreen></iframe>
 
 <p>With <em>Artificial Intellect Box</em> the theme that I want to explore, observe, and even critique, is the way human ambitiously seek to incorporate personalities in objects. This human characteristic is not a new, . The prompt for this assignment was to create a piece that represents our personality and/or biography. My piece falls closer into the first group as I explored the ways of transferring my personality into an artificial body. </p>
 
