--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
 	<meta property="og:site_name" content="mbrav.com"/>
 	<meta property="og:description" content="Creative technology student based in New York"/>
 
-  <!-- Fonts  -->
-  <link href='https://fonts.googleapis.com/css?family=Comfortaa:700' rel='stylesheet' type='text/css'>
-
   <link rel="icon" sizes="16x16" href="favicon.ico">
   <link href='src/style.css' rel='stylesheet' type='text/css'>
+  <link href='src/lib/normalize.css' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
@@ -84,7 +82,7 @@
         Artificial Intellect Box (2015)
       </div>
       <h1>Projects</h1>
-      <div id="project-list">
+      <div id="project-list" class="grid">
       </div>
       <h1>Manifestos</h1>
       <li>An Artist is A Neural Psynapse</li>
@@ -198,11 +196,13 @@
     </div>
   </main>
   <footer>
+    <p>
       2016 MB
+    </p>
   </footer>
 </body>
 <!-- <script src="code/projects/p5.min.js" type="text/javascript"></script>
 <script src="code/projects/12/script.js" type="text/javascript"></script> -->
-<script src="src/jquery-3.0.0-rc1.min.js" type="text/javascript"></script>
+<script src="src/lib/jquery-3.0.0-rc1.min.js" type="text/javascript"></script>
 <script src="src/script.js" type="text/javascript"></script>
 </html>
