Working project tiles, looks soooo nice already

--- a/index.html
+++ b/index.html
@@ -74,18 +74,11 @@
 
   <!-- PROJECTS PAGE  -->
   <main id="projects">
-    <div class="slide-img">
-      <img src="src/img/01.jpg" alt="Artificial Intellegence Box" />
-    </div>
     <div class="content">
-      <div class="img-caption">
-        Artificial Intellect Box (2015)
-      </div>
       <h1>Projects</h1>
-      <div id="project-list" class="grid">
+      <div id="project-grid">
+        <!-- PROJECT ARE GENERATED HERE  -->
       </div>
-      <h1>Manifestos</h1>
-      <li>An Artist is A Neural Psynapse</li>
     </div>
   </main>
 
@@ -204,5 +197,6 @@
 <!-- <script src="code/projects/p5.min.js" type="text/javascript"></script>
 <script src="code/projects/12/script.js" type="text/javascript"></script> -->
 <script src="src/lib/jquery-3.0.0-rc1.min.js" type="text/javascript"></script>
+<script src="src/lib/masonry.pkgd.min.js" type="text/javascript"></script>
 <script src="src/script.js" type="text/javascript"></script>
 </html>
