--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 	<meta property="og:description" content="Creative technologist based in New York"/>
 
   <link rel="icon" sizes="16x16" href="favicon.ico">
-  <link href='src/style.css' rel='stylesheet' type='text/css'>
   <link href='src/lib/normalize.css' rel='stylesheet' type='text/css'>
+  <link href='src/lib/animate.css' rel='stylesheet' type='text/css'>
+  <link href='src/style.css' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
@@ -34,20 +35,21 @@
   -->
   <!-- NAVIGATION BAR-->
   <nav>
-    <div id="title">
-      <h1>Michael</h1>
-      <h1>Braverman</h1>
+    <div id="title" >
+      <h1 class="animated fadeInDown">Michael</h1>
+      <h1 class="animated fadeInDown">Braverman</h1>
     </div>
     <div id="nav-toggle-button">
+      <!-- Hidden unless in mobile view  -->
       MENU
     </div>
-    <ul>
-      <li id="about-link"><a href="#about">About</a></li>
-      <li id="projects-link"><a href="#projects">Projects</a></li>
-      <li id="gallery-link"><a href="#gallery">Gallery</a></li>
-      <li id="resume-link"><a href="#resume">Résumé</a></li>
-      <li id="contact-link"><a href="#contact">Contact</a></li>
-      <li id="blog-link"><a href="http://blog.mbrav.com">Blog</a></li>
+    <ul class="animated fadeInLeft">
+      <li class="page-link" id="about-link"><a href="#about">About</a></li>
+      <li class="page-link" id="projects-link"><a href="#projects">Projects</a></li>
+      <li class="page-link" id="gallery-link"><a href="#gallery">Gallery</a></li>
+      <li class="page-link" id="resume-link"><a href="#resume">Résumé</a></li>
+      <li class="page-link" id="contact-link"><a href="#contact">Contact</a></li>
+      <li class="page-link" id="blog-link"><a href="http://blog.mbrav.com">Blog</a></li>
     </ul>
   </nav>
 
@@ -59,32 +61,30 @@
   </main>
 
   <!-- ABOUT PAGE  -->
-  <main id="about">
-    <div class="slide-img">
+  <main id="about" class="animated slideInRight">
+    <div id="slide-img" class="crop-img">
       <img src="src/img/01.jpg" alt="Artificial Intellegence Box" />
     </div>
+    <div class="img-caption">
+      Artificial Intellect Box (2015)
+    </div>
     <div class="content">
-      <div class="content">
-        <div class="img-caption">
-          Artificial Intellect Box (2015)
-        </div>
-        <p>Hi, I’m Michael. </p>
+      <p>Hi, I’m Michael. </p>
 
-        <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative coding</em>, <em>physical computing</em>, <em>installation art</em>, and <em>concept design</em>. </p>
+      <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative coding</em>, <em>physical computing</em>, <em>installation art</em>, and <em>concept design</em>. </p>
 
-        <p>My experiences range from front-end and back-end web development, to Internet of Things and physical computing projects that incorporate various electronic platforms such as the Arduino and the Raspberry Pi. My other skills include creative coding using openFrameworks and Processing libraries, sound effect design, 3d animation, and video editing. </p>
+      <p>My experiences range from front-end and back-end web development, to Internet of Things and physical computing projects that incorporate various electronic platforms such as the Arduino and the Raspberry Pi. My other skills include creative coding using openFrameworks and Processing libraries, sound effect design, 3d animation, and video editing. </p>
 
-        <p>In parallel with studying Design &amp; Technology at Parsons, I am persuing a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. These investigations also regard the human condition at a time of evolving technologies. It is a path that I’m attempting to direct myself as I combine it with my primary major.</p>
+      <p>In parallel with studying Design &amp; Technology at Parsons, I am persuing a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. These investigations also regard the human condition at a time of evolving technologies. It is a path that I’m attempting to direct myself as I combine it with my primary major.</p>
 
-        <p>At the time of this writing, this website remains unfinished while it is being updated on a weekly basis. </p>
+      <p>At the time of this writing, this website remains unfinished while it is being updated on a weekly basis. </p>
 
-        <p>June, 2016 </p>
-      </div>
+      <p>June, 2016 </p>
     </div>
   </main>
 
   <!-- PROJECTS PAGE  -->
-  <main id="projects">
+  <main id="projects"  class="animated slideInDown">
     <div class="content">
       <h1>Projects</h1>
       <div id="project-grid">
@@ -94,7 +94,7 @@
   </main>
 
   <!-- Gallery PAGE  -->
-  <main id="gallery">
+  <main id="gallery" class="animated slideInDown">
     <div class="content">
       <h1>Media Gallery</h1>
       <h3>"My life is a message."</h3>
@@ -106,7 +106,7 @@
   </main>
 
   <!-- RESUME PAGE  -->
-  <main id="resume">
+  <main id="resume" class="animated slideInDown">
     <div class="content">
       <h1>Résumé</h1>
       <h3>Creative Technology, Physical Computing, and Web Interaction Design</h3>
@@ -178,7 +178,7 @@
   </main>
 
   <!-- CONTACT PAGE -->
-  <main id="contact">
+  <main id="contact" class="animated slideInDown">
     <div class="content">
       <h1>Contact</h1>
       <p>You have become aquainted with my digital identity, now become aquainted with actual me...</p>
@@ -204,7 +204,7 @@
       <b>Instagram:</b> @mbrav_
     </div>
   </main>
-  <footer>
+  <footer class="animated slideInUp">
     <p>
       2016 MB
     </p>
