--- a/index.html
+++ b/index.html
@@ -18,18 +18,7 @@
 
   <link rel="icon" sizes="16x16" href="favicon.ico">
   <link href='src/lib/normalize.css' rel='stylesheet' type='text/css'>
-  <link href='src/lib/animate.css' rel='stylesheet' type='text/css'>
   <link href='src/style.css' rel='stylesheet' type='text/css'>
-
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-78885933-1', 'auto');
-  ga('send', 'pageview');
-</script>
 
 </head>
 <body>
@@ -46,14 +35,14 @@
   <!-- NAVIGATION BAR-->
   <nav>
     <div id="title" >
-      <h1 class="animated fadeInDown">Michael</h1>
-      <h1 class="animated fadeInDown">Braverman</h1>
+      <h1>Michael</h1>
+      <h1>Braverman</h1>
     </div>
     <div id="nav-toggle-button">
       <!-- Hidden unless in mobile view  -->
       MENU
     </div>
-    <ul class="animated fadeInLeft">
+    <ul>
       <li class="page-link" id="about-link"><a href="#about">About</a></li>
       <li class="page-link" id="projects-link"><a href="#projects">Projects</a></li>
       <li class="page-link" id="gallery-link"><a href="#gallery">Gallery</a></li>
@@ -71,7 +60,7 @@
   </main>
 
   <!-- ABOUT PAGE  -->
-  <main id="about" class="animated slideInRight">
+  <main id="about">
     <div id="slide-img" class="crop-img">
       <img src="src/img/01.jpg" alt="Artificial Intellegence Box" />
     </div>
@@ -94,7 +83,7 @@
   </main>
 
   <!-- PROJECTS PAGE  -->
-  <main id="projects"  class="animated slideInDown">
+  <main id="projects">
     <div class="content">
       <h1>Projects</h1>
       <div id="project-grid">
@@ -104,7 +93,7 @@
   </main>
 
   <!-- Gallery PAGE  -->
-  <main id="gallery" class="animated slideInDown">
+  <main id="gallery">
     <div class="content">
       <h1>Media Gallery</h1>
       <h3>"My life is a message."</h3>
@@ -116,7 +105,7 @@
   </main>
 
   <!-- RESUME PAGE  -->
-  <main id="resume" class="animated slideInDown">
+  <main id="resume">
     <div class="content">
       <h1>Résumé</h1>
       <h3>Creative Technology, Physical Computing, and Web Interaction Design</h3>
@@ -188,7 +177,7 @@
   </main>
 
   <!-- CONTACT PAGE -->
-  <main id="contact" class="animated slideInDown">
+  <main id="contact">
     <div class="content">
       <h1>Contact</h1>
       <p>You have become aquainted with my digital identity, now become aquainted with actual me...</p>
@@ -214,15 +203,32 @@
       <b>Instagram:</b> @mbrav_
     </div>
   </main>
-  <footer class="animated slideInUp">
+  <footer>
     <p>
       2016 MB
     </p>
   </footer>
 </body>
-<!-- <script src="code/projects/p5.min.js" type="text/javascript"></script>
-<script src="code/projects/12/script.js" type="text/javascript"></script> -->
-<script src="src/lib/jquery-3.0.0-rc1.min.js" type="text/javascript"></script>
-<script src="src/lib/masonry.pkgd.min.js" type="text/javascript"></script>
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-78885933-1', 'auto');
+ga('send', 'pageview');
+</script>
+
+<!-- load script from source -->
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrety="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+<script src="https://npmcdn.com/masonry-layout/dist/masonry.pkgd.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
+
+<!-- load scripts locally if script did not load -->
+<script>window.jQuery || document.write('<script src="src/lib/jquery-3.0.0-rc1.min.js" type="text/javascript"><\/script>')</script>
+<script>window.Masonry || document.write('<script src="src/lib/masonry.pkgd.min.js" type="text/javascript"><\/script>')</script>
+
+<script>window.TweenMax || document.write('<script src="src/lib/GSAP/TweenMax.min.js" type="text/javascript"><\/script>')</script>
+
 <script src="src/script.js" type="text/javascript"></script>
 </html>
