--- a/index.html
+++ b/index.html
@@ -223,12 +223,14 @@ ga('send', 'pageview');
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrety="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 <script src="https://npmcdn.com/masonry-layout/dist/masonry.pkgd.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/plugins/plugins/CSSPlugin.min.js"></script>
+<script src="src/lib/GSAP/plugins/CSSPlugin.min.js"></script>
 
 <!-- load scripts locally if script did not load -->
 <script>window.jQuery || document.write('<script src="src/lib/jquery-3.0.0-rc1.min.js" type="text/javascript"><\/script>')</script>
 <script>window.Masonry || document.write('<script src="src/lib/masonry.pkgd.min.js" type="text/javascript"><\/script>')</script>
-
 <script>window.TweenMax || document.write('<script src="src/lib/GSAP/TweenMax.min.js" type="text/javascript"><\/script>')</script>
+<script>window.CSSPlugin || document.write('<script src="src/lib/GSAP/plugins/CSSPlugin.min.js" type="text/javascript"><\/script>')</script>
 
 <script src="src/script.js" type="text/javascript"></script>
 </html>
