--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       <p>In parallel with studying Design &amp; Technology at Parsons, I am persuing a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. These investigations also regard the human condition at a time of evolving technologies. It is a path that I’m attempting to direct myself as I combine it with my primary major.</p>
 
-      <p>At the time of this writing, this website remains unfinished while it is being updated on a weekly basis. </p>
+      <p><em>At the time of this writing, this website remains unfinished while it is being updated on a weekly basis.</em></p>
 
       <p>June, 2016 </p>
     </div>
@@ -194,13 +194,15 @@
       <h3>My other Digital Extensions</h3>
       <b>GitHub:</b> @mbrav
       <br>
-      <b>Flickr:</b> @mixania
+      <b>Medium:</b> @mbrav
       <br>
       <b>Vimeo:</b> @mbrav
       <br>
-      <b>Soundcloud</b> @mixania
-      <br>
       <b>Instagram:</b> @mbrav_
+      <br>
+      <b>Flickr:</b> @mixania
+      <br>
+      <b>Soundcloud</b> @mixania
     </div>
   </main>
   <footer>
@@ -209,27 +211,17 @@
     </p>
   </footer>
 </body>
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-78885933-1', 'auto');
-ga('send', 'pageview');
-</script>
 
 <!-- load script from source -->
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrety="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 <script src="https://npmcdn.com/masonry-layout/dist/masonry.pkgd.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/plugins/plugins/CSSPlugin.min.js"></script>
-<script src="src/lib/GSAP/plugins/CSSPlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenLite.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/plugins/CSSPlugin.min.js"></script>
 
 <!-- load scripts locally if script did not load -->
 <script>window.jQuery || document.write('<script src="src/lib/jquery-3.0.0-rc1.min.js" type="text/javascript"><\/script>')</script>
 <script>window.Masonry || document.write('<script src="src/lib/masonry.pkgd.min.js" type="text/javascript"><\/script>')</script>
-<script>window.TweenMax || document.write('<script src="src/lib/GSAP/TweenMax.min.js" type="text/javascript"><\/script>')</script>
+<script>window.TweenMax || document.write('<script src="src/lib/GSAP/TweenLite.min.js" type="text/javascript"><\/script>')</script>
 <script>window.CSSPlugin || document.write('<script src="src/lib/GSAP/plugins/CSSPlugin.min.js" type="text/javascript"><\/script>')</script>
 
 <script src="src/script.js" type="text/javascript"></script>
