--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <ul>
       <li class="page-link" id="about-link"><a href="#about">About</a></li>
-      <li class="page-link" id="projects-link"><a href="#projects">Projects</a></li>
+      <li class="page-link" id="projects-link"><a href="#projects">Projects <span id="return-to-projecs"></span></a></li>
       <li class="page-link" id="gallery-link"><a href="#gallery">Gallery</a></li>
       <li class="page-link" id="resume-link"><a href="#resume">Résumé</a></li>
       <li class="page-link" id="contact-link"><a href="#contact">Contact</a></li>
@@ -215,13 +215,13 @@
 <!-- load script from source -->
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 <script src="https://npmcdn.com/masonry-layout/dist/masonry.pkgd.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenLite.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/plugins/CSSPlugin.min.js"></script>
 
 <!-- load scripts locally if script did not load -->
 <script>window.jQuery || document.write('<script src="src/lib/jquery-3.0.0-rc1.min.js" type="text/javascript"><\/script>')</script>
 <script>window.Masonry || document.write('<script src="src/lib/masonry.pkgd.min.js" type="text/javascript"><\/script>')</script>
-<script>window.TweenMax || document.write('<script src="src/lib/GSAP/TweenLite.min.js" type="text/javascript"><\/script>')</script>
+<script>window.TweenMax || document.write('<script src="src/lib/GSAP/TweenMax.min.js" type="text/javascript"><\/script>')</script>
 <script>window.CSSPlugin || document.write('<script src="src/lib/GSAP/plugins/CSSPlugin.min.js" type="text/javascript"><\/script>')</script>
 
 <script src="src/script.js" type="text/javascript"></script>
