--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <ul>
       <li class="page-link" id="about-link"><a href="#about">About</a></li>
-      <li class="page-link" id="projects-link"><a href="#projects">Projects <span id="return-to-projecs"></span></a></li>
+      <li class="page-link" id="projects-link"><a href="#projects">Projects </a><span id="return-to-projecs"></span></li>
       <li class="page-link" id="gallery-link"><a href="#gallery">Gallery</a></li>
       <li class="page-link" id="resume-link"><a href="#resume">Résumé</a></li>
       <li class="page-link" id="contact-link"><a href="#contact">Contact</a></li>
@@ -72,11 +72,11 @@
 
       <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative coding</em>, <em>physical computing</em>, <em>installation art</em>, and <em>concept design</em>. </p>
 
-      <p>My experiences range from front-end and back-end web development, to Internet of Things and physical computing projects that incorporate various electronic platforms such as the Arduino and the Raspberry Pi. My other skills include creative coding using openFrameworks and Processing libraries, sound effect design, 3d animation, and video editing. </p>
+      <p>My experiences range from creative web design, to physical computing projects built on the Arduino and Raspberry Pi platforms. My other skills include creative coding using openFrameworks and Processing libraries, sound effect design, 3d animation, and video editing. </p>
 
-      <p>In parallel with studying Design &amp; Technology at Parsons, I am persuing a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. These investigations also regard the human condition at a time of evolving technologies. It is a path that I’m attempting to direct myself as I combine it with my primary major.</p>
+      <p>In parallel with studying Design &amp; Technology at Parsons, I am also taking a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. I seek to investigate the human condition at a time of morphing natural environments and evolving technologies. It is a path that I am striving to combine with my primary major.</p>
 
-      <p><em>At the time of this writing, this website remains unfinished while it is being updated on a weekly basis.</em></p>
+      <p><strong>NOTE</strong> At the time of this writing, this website remains unfinished while it is being updated on a weekly basis. Come back soon to take a look at the bigger picture. 😇</p>
 
       <p>June, 2016 </p>
     </div>
@@ -140,21 +140,21 @@
         <li>Arduino, Raspberry Pi and Internet of Things </li>
         <li>Web Development (CSS, JavaScript, jQuery, node.js)</li>
         <li>Music and Sound Production (Logic Pro X) </li>
-        <li>3D Animation and modelling (Bender, Rhino) </li>
+        <li>3D Modelling and Animation (Blender, Rhino) </li>
         <li>Analog and Digital Photogrpahy (  Lightroom, Adobe Photoshop) </li>
         <li>Video Editing (Adobe Premier Pro) </li>
         <li>Operating an espresso machine</li>
       </ul>
       <h2>Interests and Influences</h2>
       <ul>
-        <li>Sceptic, Pragmatic, Stoic, and Utilitarian Philosophy</li>
-        <li>Space Exploration, Climate Change, and Humanities</li>
+        <li>Space Exploration and the Anthropocene</li>
+        <li>Sceptic, Pragmatic, and Utilitarian Philosophy</li>
+        <li>Reinforecement/Machine Learning & Neural Networks</li>
         <li>History of Mankind</li>
         <li>Modular/Analog Sound Synthesis</li>
-        <li>Machine Learning & Neural Networks</li>
-        <li>Cryptography</li>
         <li>Photography</li>
         <li>Typography</li>
+        <li>Cryptography</li>
         <li>Yoga</li>
       </ul>
       <h2>Languages</h2>
@@ -166,8 +166,8 @@
       </ul>
       Computer
       <ul>
-        <li>C++</li>
-        <li>JavaScript, HTML, and CSS</li>
+        <li>C++ (Processing, openFrameworks, Arduino)</li>
+        <li>JavaScript, HTML5, and CSS3</li>
         <li>Python</li>
         <li>Swift</li>
         <li>Turbo Pascal (1st)</li>
@@ -187,22 +187,22 @@
       <br>
       <b>GPG:</b> <a id="gpg" href="src/gpg-key.txt">7439 BE5C C296 74B5 BB9B 3EAC 31BC <span> DCD8 537D 2CF1</span></a>
       <br>
-      <b>Telegram:</b> <a href="https://telegram.me/mbrav">@mbrav </a>
+      <b>Telegram:</b> <a href="https://telegram.me/mbrav">@mbrav</a>
       <br>
-      <b>Twitter:</b> <a href="https://twitter.com/mixania">@mixania </a>
+      <b>Twitter:</b> <a href="https://twitter.com/mixania">@mixania</a>
       <br>
       <h3>My other Digital Extensions</h3>
-      <b>GitHub:</b> @mbrav
+      <b>GitHub:</b> <a href="https://github.com/mbrav">@mbrav</a>
       <br>
-      <b>Medium:</b> @mbrav
+      <b>Medium:</b> <a href="https://medium.com/@mbrav">@mbrav</a>
       <br>
-      <b>Vimeo:</b> @mbrav
+      <b>Vimeo:</b> <a href="https://vimeo.com/mbrav">@mbrav</a>
       <br>
-      <b>Instagram:</b> @mbrav_
+      <b>Instagram:</b> <a href="https://instagram.com/mbrav_">@mbrav_</a>
       <br>
-      <b>Flickr:</b> @mixania
+      <b>Flickr:</b> <a href="https://flickr.com/mixania">@mixania</a>
       <br>
-      <b>Soundcloud</b> @mixania
+      <b>Soundcloud</b> <a href="https://soundcloud.com/mixania">@mixania</a>
     </div>
   </main>
   <footer>
