Eddited project pages, added Vimeo videos

--- a/pages/emotion-cube.html
+++ b/pages/emotion-cube.html
@@ -3,3 +3,5 @@
 <h3>Physical Object</h3>
 
 <h3>November 2015</h3>
+
+<iframe src="https://player.vimeo.com/video/144803164?color=9CBEF2"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
