--- a/pages/flowing-pagoda.html
+++ b/pages/flowing-pagoda.html
@@ -1,5 +1,13 @@
-<h1>Flowing Pagoda</h1>
+<h1 id="flowingpagoda">Flowing Pagoda</h1>
 
-<h3>Processing Animation</h3>
+<h3 id="processinganimation">Processing Animation</h3>
 
-<h3>December 2015</h3>
+<h3 id="december2015">December 2015</h3>
+
+<iframe src="https://player.vimeo.com/video/149526108?color=9CBEF2"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+<p>According to the project’s philosophy, the world and everything that constitutes it relies on a constant process of rebirth and decay. Each moment is an experience of an individual mind-state such as a thought, a memory, a feeling or a perception. A mind-state arises, exists, and since it is impermanent, it soon ceases, following which the next mind-state arises. Thus the consciousness of a sentient being can be seen as a continuous series of birth and decay of these mind-states. Regardless, rebirth always remains the most persistent among these processes.</p>
+
+<p>As the Pagoda flows through the seasons, it is aware that a day will come when it will no longer stand. Its existence will someday become annihilated, but only for a finite time. After its fall, the process of its rebirth will follow after…</p>
+
+<p>The inspiration for this project was drawn from the movie called Crouching Tiger, Hidden Dragon (2000) directed by a Chinese director Ang Lee who is also well known for being the director of Life of Pi (2012).</p>
