--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative coding</em>, <em>physical computing</em>, <em>installation art</em>, and <em>concept design</em>. </p>
 
-      <p>My experiences range from creative web design, to physical computing projects built on the Arduino and Raspberry Pi platforms. My other skills include creative coding using openFrameworks and Processing libraries, sound effect design, 3d animation, and video editing. </p>
+      <p>My experiences range from creative web design, to physical computing projects built with the Arduino and Raspberry Pi platforms. My other skills include creative coding using openFrameworks and Processing libraries, sound effect design, 3d animation, and video editing. </p>
 
       <p>In parallel with studying Design &amp; Technology at Parsons, I am also taking a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. I seek to investigate the human condition at a time of morphing natural environments and evolving technologies. It is a path that I am striving to combine with my primary major.</p>
 
