--- a/pages/endevour.html
+++ b/pages/endevour.html
@@ -1,5 +1,11 @@
-<h1>The Endevours Guide to The 21st Century</h1>
+<h1 id="theendeavorsguideforthe21stcentury">The Endeavor&#8217;s Guide for the 21st Century</h1>
 
-<h3>Physical Object</h3>
+<h3 id="physicalobject">Physical Object</h3>
 
-<h3>February 2015</h3>
+<h3 id="february2016">February 2016</h3>
+
+<p>This is seeks to revive James Cook’s geographic discoveries that where made while he was the captain of the <em>Endeavour</em> ship. The device is capable of displaying the direction it is directed through 4 different modes and displays its functionality on three 7 segment displays.</p>
+
+<p>I wanted to combine a technology of the past which allowed explorers to navigate the seas. Such an invention is the compass which was a groundbreaking invention of it’s time. It’s magnetic behavior was even associated with witchcraft and is why many captains preferred to hide it in their secret chests. As the Age of Sail progressed, the compass became a widely accepted navigation tool. James Cook took the use of the compass to his own advantage that allowed him to make his historic geographical discoveries.</p>
+
+<p>The goal of this project is to replicate the importance of the compass as an instrument used for navigating the seas, and translate it into a modern context. The appearance of this device will also have Jame’s Cook’s discoveries engraved onto the enclosure. The accomplishments that James Cook managed to make, are the geographic disoveries of Australia, New Zealand, several islands in the Pacific, and the Cape Horn. Perhaps, these geographic discoveries would have been made by someone else only a century later. It is important however, to not confuse the patience and persistency of geographic discoverers with glorification of British Empire’s imperialistic expansion.</p>
