Slide-image now randomized on load, fixed menu

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <!-- Description  -->
   <meta name="title" content="Michael Braverman" />
-  <meta name="description" content="Creative technology technologist based in New York" />
+  <meta name="description" content="Creative technologist based in New York" />
   <meta name="keywords" content="design, art, technology, media, portfolio, creative coding, creative technology, physical computing, installation, concept design, Michael, Braverman" />
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
@@ -62,7 +62,8 @@
   <!-- ABOUT PAGE  -->
   <main id="about">
     <div id="slide-img" class="crop-img">
-      <img src="src/img/01.jpg" alt="Artificial Intellegence Box" />
+      <img id="previous-slide"/>
+      <img id="current-slide"/>
     </div>
     <div class="img-caption">
       Artificial Intellect Box (2015)
