tons of typos corrected

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="content">
       <h1>Projects</h1>
       <div id="project-grid">
-        <!-- PROJECT ARE GENERATED HERE  -->
+        <!-- PROJECTS ARE GENERATED HERE  -->
       </div>
     </div>
   </main>
@@ -100,7 +100,7 @@
       <h3>"My life is a message."</h3>
       <h4>- Mahatma Gandhi</h4>
       <div id="project-grid">
-        <!-- PROJECT ARE GENERATED HERE  -->
+        <!-- PROJECTS WILL BE GENERATED HERE  -->
       </div>
     </div>
   </main>
@@ -109,7 +109,7 @@
   <main id="resume">
     <div class="content">
       <h1>Résumé</h1>
-      <h3>Creative Technology, Physical Computing, and Web Interaction Design</h3>
+      <h3>Creative Technology, Physical Computing, and Installation Art</h3>
 
       <h2>Education</h2>
       <p>
@@ -139,7 +139,7 @@
       <ul>
         <li>Creative Coding (Processing, Open Frameworks, etc.) </li>
         <li>Arduino, Raspberry Pi and Internet of Things </li>
-        <li>Web Development (CSS, JavaScript, jQuery, node.js)</li>
+        <li>Web Technologies (CSS3 & HTML5, JavaScript, node.js)</li>
         <li>Music and Sound Production (Logic Pro X) </li>
         <li>3D Modelling and Animation (Blender, Rhino) </li>
         <li>Analog and Digital Photogrpahy (  Lightroom, Adobe Photoshop) </li>
@@ -148,14 +148,13 @@
       </ul>
       <h2>Interests and Influences</h2>
       <ul>
-        <li>Space Exploration and the Anthropocene</li>
+        <li>Earth's Condition, Human Condtion, and the Anthropocene</li>
+        <li>History of Mankind, Earth, and Universe</li>
         <li>Sceptic, Pragmatic, and Utilitarian Philosophy</li>
         <li>Reinforecement/Machine Learning & Neural Networks</li>
-        <li>History of Mankind</li>
         <li>Modular/Analog Sound Synthesis</li>
         <li>Photography</li>
         <li>Typography</li>
-        <li>Cryptography</li>
         <li>Yoga</li>
       </ul>
       <h2>Languages</h2>
