--- a/code/index.html
+++ b/code/index.html
@@ -26,9 +26,9 @@
         <a class="project-link" href="projects/09/index.html"><h2><span>09</span>classified rita</h2></a>
         <a class="project-link" href="projects/10/index.html"><h2><span>10</span>teach me</h2></a>
         <a class="project-link" href="http://mbrav.com/"><h2><span>11</span>Téchnelogical Feudalism<b> (final)</b></h2></a>
-        <a class="project-link" href="projects/12/index.html"><h2><span>12</span>eccentric waves</h2></a>
-        <a class="project-link" href="projects/13/index.html"><h2><span>13</span>three.js</h2></a>
-        <a class="project-link" href="projects/14/index.html"><h2><span>14</span>free special characters</h2></a>
+        <a class="project-link" href="projects/12/index.html"><h2><span>12</span>three.js</h2></a>
+        <a class="project-link" href="projects/13/index.html"><h2><span>13</span>free special characters</h2></a>
+        <a class="project-link" href="projects/14/index.html"><h2><span>13</span>terra form</h2></a>
     </main>
   </body>
   <script type="text/javascript">
