--- a/code/projects/12/index.html
+++ b/code/projects/12/index.html
@@ -1,18 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Eccentric Waves</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <style>
-    body {
-      margin: 0;
-    }
-
-    </style>
-  </head>
-  <body>
-    <script src="../p5.min.js" type="text/javascript"></script>
-    <script src="script.js" type="text/javascript"></script>
+	<head>
+		<meta charset=utf-8>
+		<title>My first Three.js app</title>
+		<style>
+			body { margin: 0; }
+			canvas { width: 100%; height: 100% }
+		</style>
+	</head>
+	<body>
+		<script src="../three.min.js"></script>
+		<script src="script.js"></script>
+	</body>
 </html>
