Aded automatic slide transitions

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
   <!-- ABOUT PAGE  -->
   <main id="about">
     <div id="slide-img" class="crop-img">
-      <img id="previous-slide"/>
-      <img id="current-slide"/>
+      <img/>
     </div>
     <div class="img-caption">
       Artificial Intellect Box (2015)
