--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <main id="projects">
     <div class="content">
       <h1>Projects</h1>
-      <div id="project-grid">
+      <div id="project-grid" class="tile-grid">
         <!-- PROJECTS ARE GENERATED HERE  -->
       </div>
     </div>
@@ -96,10 +96,8 @@
   <main id="gallery">
     <div class="content">
       <h1>Media Gallery</h1>
-      <h3>"My life is a message."</h3>
-      <h4>- Mahatma Gandhi</h4>
-      <div id="project-grid">
-        <!-- PROJECTS WILL BE GENERATED HERE  -->
+      <div id="gallery-grid" class="tile-grid">
+        <!-- GALLERY ITEMS WILL BE GENERATED HERE  -->
       </div>
     </div>
   </main>
