--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <link href='src/lib/normalize.css' rel='stylesheet' type='text/css'>
   <link href='src/style.css' rel='stylesheet' type='text/css'>
 
+  <link href="https://fonts.googleapis.com/css?family=Bitter|Source+Sans+Pro" rel="stylesheet">
+
 </head>
 <body>
   <!--
