eye beam submission

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
   <main id="gallery">
     <div class="content">
       <h1>Media Gallery</h1>
+      <p>For more Photos please see my <a href="https://flickr.com/mixania">Flickr Photostream</a></p>
       <div id="gallery-grid" class="tile-grid">
         <!-- GALLERY ITEMS WILL BE GENERATED HERE  -->
       </div>
