--- a/pages/inform.html
+++ b/pages/inform.html
@@ -3,3 +3,19 @@
 <h3>Physical Computing Tool</h3>
 
 <h3>March 2015</h3>
+
+<p> <a href="https://github.com/mbrav/infORM/blob/master/ProjectIntent.pdf">PDF</a></p>
+
+<p>This project is an attempt to explore certain fields in
+technology that remain uninfluenced in non-technical
+applications. One of these technologies that would defend
+the argument is Object Relational Mapping (ORM) which is
+a field in the sphere of technology that lacks an initiative
+for innovation. It’s effectivity has proven to not be
+significant due to the non-substantial ways of its
+application. The project will explore wether the reason for
+ORM’ ineffective applications are the principles based on
+which its data relations are drawn. The relation between
+data will be created with the help of a physical computing
+device that will gather data from the physical environment
+and visualize it using a technology based medium.</p>
