--- a/code/index.html
+++ b/code/index.html
@@ -15,20 +15,21 @@
   <body>
     <h1 class="title" data-text="whats gucci?">whats gucci?</h1>
     <main>
-        <a class="project-link" href="projects/01/index.html"><h2><span>01</span>squarework</h2></a>
-        <a class="project-link" href="projects/02/index.html"><h2><span>02</span>oulipo</h2></a>
-        <a class="project-link" href="projects/03/index.html"><h2><span>03</span>bubbles</h2></a>
-        <a class="project-link" href="projects/04/index.html"><h2><span>04</span>flesch</h2></a>
-        <a class="project-link" href="projects/05/index.html"><h2><span>05</span>in.fORM regex-alpha</h2></a>
-        <a class="project-link" href="https://github.com/mixania/infORM"><h2><span>06</span>infORM alpha <b> (wip)</b></h2></a>
-        <a class="project-link" href="projects/07/index.html"><h2><span>07</span>word wave</h2></a>
-        <a class="project-link" href="projects/08/index.html"><h2><span>08</span>happy-api</h2></a>
-        <a class="project-link" href="projects/09/index.html"><h2><span>09</span>classified rita</h2></a>
-        <a class="project-link" href="projects/10/index.html"><h2><span>10</span>teach me</h2></a>
-        <a class="project-link" href="http://mbrav.com/"><h2><span>11</span>Téchnelogical Feudalism<b> (final)</b></h2></a>
-        <a class="project-link" href="projects/12/index.html"><h2><span>12</span>three.js</h2></a>
-        <a class="project-link" href="projects/13/index.html"><h2><span>13</span>free special characters</h2></a>
-        <a class="project-link" href="projects/14/index.html"><h2><span>13</span>terra form</h2></a>
+      <h2>Data-Poetics</h2>
+        <a class="project-link" href="projects/01/index.html"><h3><span>01</span>squarework</h3></a>
+        <a class="project-link" href="data-poetics/02/index.html"><h3><span>02</span>oulipo</h3></a>
+        <a class="project-link" href="data-poetics/03/index.html"><h3><span>03</span>bubbles</h3></a>
+        <a class="project-link" href="data-poetics/04/index.html"><h3><span>04</span>flesch</h3></a>
+        <a class="project-link" href="data-poetics/05/index.html"><h3><span>05</span>in.fORM regex-alpha</h3></a>
+        <a class="project-link" href="https://github.com/mbrav/infORM"><h3><span>06</span>infORM alpha <b> (wip)</b></h3></a>
+        <a class="project-link" href="data-poetics/07/index.html"><h3><span>07</span>word wave</h3></a>
+        <a class="project-link" href="data-poetics/08/index.html"><h3><span>08</span>happy-api</h3></a>
+        <a class="project-link" href="data-poetics/09/index.html"><h3><span>09</span>classified rita</h3></a>
+        <a class="project-link" href="data-poetics/10/index.html"><h3><span>10</span>teach me</h3></a>
+        <a class="project-link" href="data-poetics/11/index.html"><h3><span>11</span>free special characters</h3></a>
+        <a class="project-link" href="data-poetics/12/index.html"><h3><span>12</span>terra form</h3></a>
+      <h2>WebGL Shaders</h2>
+        <a class="project-link" href="shaders/01/index.html"><h3><span>01</span>World Of Waves</h3></a>
     </main>
   </body>
   <script type="text/javascript">
