--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <u>Peer Mentor</u> March 2016 - Currentley
       <h2>Skills</h2>
       <ul>
-        <li>Creative Coding (Processing, Open Frameworks, etc.) </li>
+        <li>Creative Coding (Processing, Open Frameworks, GLSL, etc.) </li>
         <li>Arduino, Raspberry Pi and Internet of Things </li>
         <li>Web Technologies (CSS3 & HTML5, JavaScript, node.js)</li>
         <li>Music and Sound Production (Logic Pro X) </li>
@@ -169,7 +169,7 @@
         <li>C++ (Processing, openFrameworks, Arduino)</li>
         <li>JavaScript, HTML5, and CSS3</li>
         <li>Python</li>
-        <li>Swift</li>
+        <li>GLSL</li>
         <li>Turbo Pascal (1st)</li>
         <li>R</li>
       </ul>
