Added project images, made everything lighter

--- a/pages/flowing-pagoda.html
+++ b/pages/flowing-pagoda.html
@@ -1,13 +1,15 @@
-<h1 id="flowingpagoda">Flowing Pagoda</h1>
+<h1>Flowing Pagoda</h1>
 
-<h3 id="processinganimation">Processing Animation</h3>
+<h3>Processing Animation</h3>
 
-<h3 id="december2015">December 2015</h3>
+<h3>December 2015</h3>
+
+<p>According to the philosophy that this project manifests, everything that constitutes the world, relies on a process of <em>rebirth</em> and <em>decay</em>. Each moment is an experience of our active mind-state. This allows the mind-state to possess thoughts, memories, feelings, and perceptions. The mind-state arises, exists for a certain period of time, and because of its impermanent nature, it eventually decays. But even after it decayed, its process of rebirth will always be on its way. The process thus repeats, just like Spring, Summer, Autumn, and Winter. This process is poetic in its nature. </p>
 
 <iframe src="https://player.vimeo.com/video/149526108?color=9CBEF2"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-<p>According to the philosophy that this project manifests, everything that constitutes the world, relies on a constant process of rebirth and decay. Each moment of an expereince of an individual mind-state of a thought, a memory, a feeling, or a perception. A mind-state arises, maintains its existance, and since it is impermanent, it will eventually follow a process of decay. But even after its decay, there will be the next mind-state and the process will repeat. The consciousness of a sentient being is a continuous series of births and decays of these mind-states. The beauty behind this philosophy, is that despite the abundant number of decaying processes in the natural world, rebirth remains the most persistent aspect of existence.</p>
+<p>The consciousness is a continuous series of births and decays. The beauty behind this philosophy, is that despite the abundant number of decaying processes in the natural world, rebirth always remains their most persistent aspect. Even if something seems to be in a state of eternal decay, let one be assured that the cycle may be longer than one might expect.</p>
 
-<p>In the animation I represented this process in the context of seasons. As the Pagoda flows through the seasons, it is aware that a day will come when it will no longer stand. Its existence will someday become annihilated, but only for a finite time. The seasons that accompany the pagoda, are reminders of the rebirth/decay cycle. After pagoda’s fall, the process of rebirth will immediately follow. It might come soon, or an eternity will pass before it does. But the seasons have thought the pagoda patience and persistence. By embracing these virtues, the pagoda flourishes and continues through the process. </p>
+<p>The animation represents the rebirth and decay process in the context of seasons. As the Pagoda flows through the seasons, it is aware that a day will come when it no longer stands. Its existence will someday become annihilated, but it&#8217;s only temporary. The seasons that accompany the pagoda, are reminders of the consistent rebirth/decay cycle. After the pagoda’s fall and eventual decay, the process of rebirth would immediately follow. It might come soon, or an eternity will pass before. But the seasons have thought the pagoda a few virtues - patience and persistence. By embracing these virtues, the pagoda flourishes and continues through this natural process with its marvelous and poetic spirit. </p>
 
-<p>The inspiration for this project was drawn from the movie called <em>Crouching Tiger, Hidden Dragon</em> (2000) directed by a Chinese director Ang Lee who is also well known for being the director of <em>Life of Pi</em> (2012).</p>
+<p>The inspiration for this project was drawn from the movie called <em>Crouching Tiger, Hidden Dragon</em> (2000) directed Ang Lee who is very well known for directing <em>Life of Pi</em> (2012).</p>
