--- a/pages/data-poetics.html
+++ b/pages/data-poetics.html
@@ -1,9 +1,9 @@
-<h1 id="javascriptexperiments">Data Poetics</h1>
+<h1>Data Poetics</h1>
 
-<h3 id="creativecomputercode">JavaScript Experiments</h3>
+<h3>Creative Computer Code</h3>
 
-<h3 id="january-february2016">January - February 2016</h3>
+<h3>January - February 2016</h3>
 
-<p>These are various JavaScript experiments that I’ve made while taking Bryan Ma’s class called <em>Code: Data Poetics</em> at Parsons School of Design. The emphasis in this class was to procedurally analyze text-based data and learn ways to creatively manipulate it. </p>
+<p>These are various JavaScript experiments that I’ve made while taking Bryan Ma’s class called <em>Code: Data Poetics</em> at Parsons School of Design. The emphasis in this class was to procedurally analyze text-based data and learn ways to creatively manipulate it. The techniques that where explored in this class was to generate text via statistics and probability, Markov chains, Twitter bots, and API’s.</p>
 
-<p><a href="code/index.html">Link to Projects </a></p>
+<p><a href="code/index.html">Link to Projects</a></p>
