--- a/pages/endevour.html
+++ b/pages/endevour.html
@@ -1,11 +1,13 @@
-<h1 id="theendeavorsguideforthe21stcentury">The Endeavor&#8217;s Guide for the 21st Century</h1>
+<h1>The Endeavour’s Guide for the 21st Century</h1>
 
-<h3 id="physicalobject">Physical Object</h3>
+<h3>Physical Object</h3>
 
-<h3 id="february2016">February 2016</h3>
+<h3>February 2016</h3>
 
 <p>The intention behind this project is to revive James Cook’s geographic discoveries that where made while he was the captain of the <em>Endeavour</em> ship. The device is capable of displaying the direction it is directed through 4 different modes and displays its functionality on three 7 segment displays.</p>
 
-<p>I wanted to combine a technology of the past that allowed explorers to navigate the seas. One of the most prominent among these inventions was the compass that transformed sea navigation when it was first introduced in China. The compass became an object of wonder, it’s magnetic behavior was even associated with witchcraft and is why many captains preferred to hide it in their secret chests. As the age of sail proceeded, the compass became a widely accepted navigation tool. James Cook took the use of the compass to his own advantage that allowed him to make his historic geographical discoveries.</p>
+<p>I wanted to combine a technology of the past that allowed explorers to navigate the seas while they where on their historic journeys. One of the most prominent among these inventions was the compass. The compass was a tool that transformed sea navigation after it was first invented in China. The compass became an object of wonder, it’s magnetic behavior was even associated with witchcraft and is why many captains preferred to hide it in their secret chests. As the age of sail proceeded, the compass became a widely accepted navigation tool. James Cook took the use of the compass to his own advantage which allowed him to make his historic geographical discoveries.</p>
 
-<p>The goal of this project is to replicate the importance of the compass as an instrument used for navigating the seas and translate it into a modern context. The appearance of this device also has Jame’s Cook’s geographic discoveries engraved onto the enclosure. The accomplishments that James Cook managed to make, are the geographic disoveries of Australia, New Zealand, several islands in the Pacific, and the Cape Horn. Perhaps, these geographic discoveries would have been made by someone else only a century later. It is important however, to not confuse the patience and persistency of geographic discoverers with glorification of British Empire’s imperialistic expansion.</p>
+<p>The goal of this project is to replicate the importance of the compass as an instrument used for navigating the seas and translate it into a modern context. The appearance of this device also has James’s Cook’s geographic discoveries engraved onto the enclosure. The accomplishments that James Cook managed to make, are the geographic discoveries of Australia, New Zealand, several islands in the Pacific, and the Cape Horn. Perhaps, these geographic discoveries would have been made by someone else only a century later. It is important however, to not confuse the patience and persistence of geographic discoverers with the glorification of British Empire’s imperialistic expansions.</p>
+
+<p>The Initial assignment was to create a laser cuted enclosure for the Arduino Uno but I wanted to expand it into a project. I experimented with controlling two 7 segment displays in class and wanted to convert it into a project by incorporating it with a laser cutted case and a magnetometer.</p>
