--- a/pages/utopia-tower.html
+++ b/pages/utopia-tower.html
@@ -1,8 +1,8 @@
-<h1 id="infrastructuralutopiatower">Infrastructural Utopia Tower</h1>
+<h1>Infrastructural Utopia Tower</h1>
 
-<h3 id="installationpiece">Installation Piece</h3>
+<h3>Installation Piece</h3>
 
-<h3 id="may2016">May 2016</h3>
+<h3>May 2016</h3>
 
 <iframe src="https://player.vimeo.com/video/166409996?color=9CBEF2"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
