--- a/pages/endevour.html
+++ b/pages/endevour.html
@@ -1,8 +1,12 @@
 <h1>The Endeavour’s Guide for the 21st Century</h1>
 
-<h3>Physical Object</h3>
+<h3>Physical Object (incomplete)</h3>
 
 <h3>February 2016</h3>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tzNWS7Lbi3c" frameborder="0" allowfullscreen></iframe>
+
+<h2>Statement</h2>
 
 <p>The intention behind this project is to revive James Cook’s geographic discoveries that where made while he was the captain of the <em>Endeavour</em> ship. The device is capable of displaying the direction it is directed through 4 different modes and displays its functionality on three 7 segment displays.</p>
 
