--- a/pages/flowing-pagoda.html
+++ b/pages/flowing-pagoda.html
@@ -6,6 +6,8 @@
 
 <iframe src="https://player.vimeo.com/video/149526108?color=9CBEF2"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
+<h2>Statement</h2>
+
 <p>According to the philosophy that this project manifests, everything that constitutes the world, relies on a process of <em>rebirth</em> and <em>decay</em>. Each moment is an experience of our active mind-state. This allows the mind-state to possess thoughts, memories, feelings, and perceptions. The mind-state arises, exists for a certain period of time, and because of its impermanent nature, it eventually decays. But even after it decayed, its process of rebirth will always be on its way. The process thus repeats, just like Spring, Summer, Autumn, and Winter. This process is poetic in its nature. </p>
 
 <p>The consciousness is a continuous series of births and decays. The beauty behind this philosophy, is that despite the abundant number of decaying processes in the natural world, rebirth always remains their most persistent aspect. Even if something seems to be in a state of eternal decay, let one be assured that the cycle may be longer than one might expect.</p>
