--- a/pages/inform.html
+++ b/pages/inform.html
@@ -6,6 +6,8 @@
 
 <p> <a href="https://github.com/mbrav/infORM/blob/master/ProjectIntent.pdf">PDF</a></p>
 
+<h2>Statement</h2>
+
 <p>This project is an attempt to explore certain fields in
 technology that remain uninfluenced in non-technical
 applications. One of these technologies that would defend
