--- a/pages/utopia-tower.html
+++ b/pages/utopia-tower.html
@@ -6,6 +6,8 @@
 
 <iframe src="https://player.vimeo.com/video/166409996?color=9CBEF2"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
+<h2>Statement</h2>
+
 <p><em>Infrastructural Utopia Tower</em> is an art installation that emphasizes on the way our modern society has become reliant on infrastructures and automated systems. For a modern human, infrastructure is second nature. Without infrastructure, a human would think he/she had been placed in the wilderness. Us humans, attempt to apply infrastructures almost everywhere while the technological advances only aid this process.</p>
 
 <p>Infrastructure is meant to be built in technological environments. We are affected by it, most of the time without even noticing; hundreds of wires pass through walls, dozens of pipes are laid beneath us, and an unknown number of radio frequencies pass through our bodies. All this illustrates infrastructure’s overwhelming presence, yet, it is cleverly engineered to remain unnoticed. We have the privilege to blindly use the word “working” to describe the thousands of operations that infrastructures perform on a daily basis. This however, is a burden as much as it is considered to be a privilege. </p>
