--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <p>In parallel with studying Design &amp; Technology at Parsons, I am also pursuing a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. I seek to investigate the human condition at a time of morphing environments and evolving technologies. It is a path that I am striving to combine with my primary major.</p>
 
-      <p>My area of focus is experimental for the most part. I’m actively pursuing oppurtunities that would allow me to extend my specialization. I will be happy to collaborate in projects and installations that focus on activism, social awareness, and all kinds of other subjects that regard technology its enviornments.</p>
+      <p>My area of focus is experimental for the most part. I’m actively pursuing oppurtunities that would allow me to extend my specialization. I will be happy to collaborate in projects and installations that focus on activism, social awareness, and all kinds of other subjects that regard technology and its enviornments.</p>
     </div>
   </main>
 
