--- a/pages/stardust-composer.html
+++ b/pages/stardust-composer.html
@@ -6,6 +6,8 @@
 
 <iframe src="https://player.vimeo.com/video/177885335?color=9CBEF2"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
+<h2>Statement</h2>
+
 <p><em>Stardust Music Composer</em> is an experiment that emphasizes on interactivity and visualization and combining it with music composition. Current Digital Audio Workstation (DAW) software used for music production by professionals, does not incorporate any aspects of interaction outside of the technical realm. This experimental project seeks to add a visual element to the music production process and combine it with an interactive aspect.</p>
 
 <p>The user interacts with the interface by pressing keys that trigger audio loop samples. As the samples play music loops, the user can open a drum machine sequencer and compose a drum pattern and allowing a musical and a visual performance to be produced at the same time. </p>
