Added Feeduino project

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <ul>
         <li>English (fluent)</li>
         <li>Russian (fluent)</li>
-        <li>Italian (advanced)</li>
+        <li>Italian (advanced/fluent)</li>
       </ul>
       Computer
       <ul>
