--- a/index.html
+++ b/index.html
@@ -70,15 +70,16 @@
       Artificial Intellect Box (2015)
     </div>
     <div class="content">
-      <p>Hi, I’m Michael. </p>
+      <p>Hi, I’m Michael 👋🏼</p>
 
-      <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative coding</em>, <em>installation art</em>, and <em>ethical design</em>. </p>
+      <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative technology</em>, <em>installation art</em>, <em>interaction design</em> and <em>ethical design</em>. </p>
 
-      <p>My experiences range from creative/experimental web design (including this site), to art installations built on the Arduino and Raspberry Pi platforms. My other skills include creative coding using openFrameworks and Processing libraries, sound effect design, 3d animation, photography and video editing. </p>
+      <p>My experiences range from creative/experimental web projects (including this site), to art installations built on the Arduino and Raspberry Pi platforms. My other skills include creative coding using openFrameworks and Processing libraries, sound effect &amp; music production, 3d animation, photography and video editing.</p>
 
       <p>In parallel with studying Design &amp; Technology at Parsons, I am also pursuing a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. I seek to investigate the human condition at a time of morphing environments and evolving technologies. It is a path that I am striving to combine with my primary major.</p>
 
-      <p>My area of focus is experimental for the most part. I’m actively pursuing oppurtunities that would allow me to extend my specialization. I will be happy to collaborate in projects and installations that focus on activism, social awareness, and all kinds of other subjects that regard technology and its enviornments.</p>
+      <p>My area of focus is experimental for the most part. I’m actively pursuing opportunities that would allow me to extend my specialization. I am happy to collaborate in projects and installations that focus on activism, social awareness, and all kinds of other subjects that regard technology and its environments. 💻🌎</p>
+
     </div>
   </main>
 
@@ -132,7 +133,7 @@
       <h2>Expereince</h2>
       <strong>Parsons School of Design</strong> New York, NY
       <br>
-      <u>Peer Mentor</u> March 2016 - Currentley
+      <u>Peer Mentor</u> March 2016 - currently
       <h2>Skills</h2>
       <ul>
         <li>Creative Coding (Processing, Open Frameworks, GLSL, etc.) </li>
